style.css
*{
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: 100;
    box-sizing: border-box; /*Makes sure that padding and boarder are included in total w and h*/
}

header{
    background-color: black;
    height: 100px;
    position:relative;
}

nav{
    position:absolute;
    bottom:0;
    right:0;
    padding-bottom: 10px;
}

li{
    display: inline;
    padding: 0px 10px 0px 10px;
}

li:hover{
    text-decoration: underline;
}

nav a{
    color:white;
    text-decoration: none;
}
.tile a{
    color:black;
    text-decoration: none;
}
.background{
    background-image:url(korea_foodstall.jpg);
    background-position: center;
    background-size: cover;
    position:relative;
    top:0;
    right:0;
    left:0;
    bottom:0;
    height:600px;
    width:100%;
    opacity: 60%;
    z-index: -1; /*Places background behind other elements*/
}

.thumbnail{
    width: 150px;
    height: 150px;
    object-fit: contain /*Keeps image aspect ratio*/
}
.text{
    background-color: black;
    color:white;
    width:250px;
    position: absolute;
    top: 50%;
    left: 50%;
    text-align: center;
    transform: translate(-50%,-50%); /*This makes it centered no matter what view*/
    font-size: x-large;
    padding:50px;
    opacity:0.8;
}

.bar{
    background-color: white;
    display:inline-grid;
    grid-auto-flow: column; /*Forces all to stay in one row*/
    column-gap: 30px;
    width:100%;
    padding: 0px 30px 30px 30px;
    overflow:scroll;
}

.button{
    background-color: black;
    color:white;
    margin: 15px;
    border-radius: 5px;
}
.gallery{
    display:grid;
    grid-template-columns: repeat(auto-fill, 300px);
    gap: 30px;
    justify-content: center;
}

.destinations{
    display:grid;
    grid-template-columns: repeat(auto-fill, 200px);
    gap: 30px;
    justify-content: center;
    text-align: center;
}

.tile:hover{
    opacity: 0.6;
    scale: 1.1;
}

.caption{
    padding: 10px;
    font-size: small;
    text-align: center;
    background-color: white;
}

h1{
    color: black;
    padding: 10px;
    text-align: center;
}

.textsection{
    float:left;
    width: 70%;
    margin: auto;
}

.picsection{
    float:right;
    width: 30%;
    margin: auto;
    object-fit: contain; /*Maintains image aspect ratio*/

    }
.contactform{
    text-align: left;
    /*Needed to specify width then set margin to auto to center*/
    width: 300px;
    margin: auto;

}
footer{
    position: relative;
    bottom:0;
    height:30px;
    width:100%;
    color: white;
    text-align: center;
}

